--- a/index.html
+++ b/index.html
@@ -343,6 +343,10 @@
       background-image: url("images/TBCoverPhoto.jpg");
     }
 
+    #spacing {
+      height: 150px;
+    }
+
   </style>
   
   <body>
@@ -354,10 +358,10 @@
           <div class="col-md-4">
               <div class="tabbable-line">
                 <ul class="nav nav-tabs">
-                  <li><a class="text-center" data-toggle="tab" style="text-decoration: none" href="#AboutMe" style="color: white;"> About Me </a></li>
-                  <li><a class="text-right" data-toggle="tab" style="text-decoration: none" href="#Projects" style="color: white;"> Projects </a></li>
-                  <li><a class="text-left" data-toggle="tab" style="text-decoration: none" href="#Skills" style="color: white;"> Skills </a></li>
-                  <li><a class="text-center" data-toggle="tab" style="text-decoration: none" href="#Awards" style="color: white;"> Awards </a></li>
+                  <li><a class="text-center" data-toggle="tab" style="text-decoration: none" href="#AboutMe"> <p style="color: white;"> About Me </p> </a></li>
+                  <li><a class="text-right" data-toggle="tab" style="text-decoration: none" href="#Projects"> <p style="color: white;"> Projects </p> </a></li>
+                  <li><a class="text-left" data-toggle="tab" style="text-decoration: none" href="#Skills"> <p style="color: white;"> Skills </p> </a></li>
+                  <li><a class="text-center" data-toggle="tab" style="text-decoration: none" href="#Awards"> <p style="color: white;"> Awards </p> </a></li>
                 </ul>
               </div>
           </div>
@@ -369,13 +373,15 @@
           <div class="col-md-4">
               <div class="tabbable-line">
                 <ul class="nav nav-tabs">
-                  <li><a class="text-right" data-toggle="tab" style="text-decoration: none" href="#Contact" style="color: white;"> Contact </a></li>
+                  <li><a class="text-right" data-toggle="tab" style="text-decoration: none" href="#Contact"> <p style="color: white;"> Contact </p> </a></li>
                 </ul>
               </div>
           </div>
         </div>
       </nav>
 
+      <div id="spacing">
+      </div>
 
       <div id="marker">
       </div>
@@ -387,6 +393,9 @@
         <br>
         <br>
         <h3> This is my personal website. Have a look around! </h3>
+      </div>
+
+      <div id="spacing">
       </div>
 
     </div>
