--- a/index.html
+++ b/index.html
@@ -1,261 +1,36 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
+  <head lang="en">
+    <meta charset="UTF-8">
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--Page Title-->
+    <title>Jack Douglas</title>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!--Meta Keywords and Description-->
+    <meta name="keywords" content="">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+    <!--Favicon-->
+    <link rel="shortcut icon" href="images/favicon.ico" title="Favicon"/>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
-
-    <!--Icon Fonts - Font Awesome Icons-->
-    <link rel="stylesheet" href="Font_Awesome/css/font-awesome.css">
+    <!-- Main CSS Files -->
+    <link rel="stylesheet" href="css/style.css">
 
     <!-- Namari Color CSS -->
     <link rel="stylesheet" href="css/namari-color.css">
 
-    <!-- Main CSS Files -->
-    <link rel="stylesheet" href="css/style.css">
+    <!--Icon Fonts - Font Awesome Icons-->
+    <link rel="stylesheet" href="css/font-awesome.min.css">
 
     <!-- Animate CSS-->
     <link href="css/animate.css" rel="stylesheet" type="text/css">
 
     <!--Google Webfonts-->
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
-
-    <link rel="icon" href="images/JD.jpg">
-
-    <title> Jack Douglas </title>
-
+  
   </head>
-
-  <style>
-
-    #AboutMe {
-      margin-top: -180px;
-    }
-
-  	#Projects {
-  		background-color: #EAF9FA;
-      padding-top: 20px;
-      padding-bottom: 7px;
-  	}
-
-    #Awards {
-      background-color: #EAF9FA;
-      padding-top: 20px;
-      padding-bottom: 7px;
-    }
-
-    #marker {
-      height: 10px;
-    }
-
-    #welcome {
-      text-align: center;
-      color: white;
-    }
-
-    #intro1 {
-      font-size: 20px;
-    }
-
-    #intro3 {
-      font-size: 20px;
-    }
-
-    #footer1 {
-        margin-top: 0px; /* negative value of footer height */
-        height: 50px;
-        clear: both;
-        padding-top: 20px;
-        background-color: lightgrey;
-    }
-
-    #footer2 {
-      font-size: 12px;
-      float: left;
-    }
-
-    #footer3 {
-      font-size: 12px;
-      float: right;
-    }
-
-    .navbar-header {
-      float: left;
-      padding: 15px;
-      text-align: center;
-      width: 100%;
-    }
-    .navbar-brand {
-      float:center;
-    }
-
-    .navbar1 { 
-      background-color: rgba(0,0,0,0) !important; 
-
-    }
-    .navbar2 {
-      background-color: rgba(240,240,240,0.95) !important;
-    }
-
-    #logo {
-      float: center;
-    }
-
-    .text-left {
-      text-align: left;
-    }
-
-    .text-center {
-      text-align: center;
-    }
-
-    .text-right {
-      text-align: right;
-    }
-
-    /** Section details */
-
-    .section-title1 {
-      max-width: 800px;
-      margin: 80px auto;
-      padding: 15px;
-      text-align: center; 
-    }
-    .section-title2 {
-      max-width: 800px;
-      margin: 80px auto;
-      padding: 15px;
-      text-align: center; 
-    }
-    .section-title1 h2 {
-      font-size: 30px;
-      text-transform: uppercase;
-      color: #2ca5b9; 
-    }
-    .section-title2 h2 {
-      font-size: 30px;
-      text-transform: uppercase;
-      color: #000000; 
-    }
-    .section-title1 .divider {
-      position: relative;
-      border-bottom: 1px solid #000000;
-      margin-bottom: 30px;
-      margin-top: 30px; 
-    }
-    .section-title1 .divider:before {
-      position: absolute;
-      content: '';
-      width: 30px;
-      height: 30px;
-      border: 1px solid #000000;
-      left: 50%;
-      margin-left: -15px;
-      top: 50%;
-      background: #fff;
-      margin-top: -15px;
-      -webkit-transform: rotate(45deg);
-      -moz-transform: rotate(45deg);
-      -ms-transform: rotate(45deg);
-      transform: rotate(45deg); 
-    }
-    .section-title1 .divider:after {
-      position: absolute;
-      content: '';
-      width: 20px;
-      height: 20px;
-      border: 1px solid #2ca5b9;
-      left: 50%;
-      margin-left: -10px;
-      top: 50%;
-      background: #2ca5b9;
-      margin-top: -10px;
-      -webkit-transform: rotate(45deg);
-      -moz-transform: rotate(45deg);
-      -ms-transform: rotate(45deg);
-      transform: rotate(45deg); 
-    }
-    .section-title2 .divider {
-      position: relative;
-      border-bottom: 1px solid #000000;
-      margin-bottom: 30px;
-      margin-top: 30px; 
-    }
-    .section-title2 .divider:before {
-      position: absolute;
-      content: '';
-      width: 30px;
-      height: 30px;
-      border: 1px solid #000000;
-      left: 50%;
-      margin-left: -15px;
-      top: 50%;
-      background: #fff;
-      margin-top: -15px;
-      -webkit-transform: rotate(45deg);
-      -moz-transform: rotate(45deg);
-      -ms-transform: rotate(45deg);
-      transform: rotate(45deg); 
-    }
-    .section-title2 .divider:after {
-      position: absolute;
-      content: '';
-      width: 20px;
-      height: 20px;
-      border: 1px solid #2ca5b9;
-      left: 50%;
-      margin-left: -10px;
-      top: 50%;
-      background: #2ca5b9;
-      margin-top: -10px;
-      -webkit-transform: rotate(45deg);
-      -moz-transform: rotate(45deg);
-      -ms-transform: rotate(45deg);
-      transform: rotate(45deg); 
-    }
-
-    body {
-      margin-top: -10px;
-    }
-
-    .btn {
-      background-color: #4CAF50; /* Green */
-      border: none;
-      border-radius: 12px;
-      color: white;
-      padding: 16px 32px;
-      text-align: center;
-      text-decoration: none;
-      display: inline-block;
-      font-size: 16px;
-      margin: 4px 2px;
-      -webkit-transition-duration: 0.4s; /* Safari */
-      transition-duration: 0.4s;
-      cursor: pointer;
-      background-color: white; 
-      color: black; 
-      border: 2px solid #008CBA;
-    }
-
-    .btn:hover {
-        background-color: #008CBA;
-        color: white;
-    }
-
-
-  </style>
   
   <body>
 
@@ -287,11 +62,11 @@
                         <div id="logo">
 
                             <!--Logo that is shown on the banner-->
-                            <img src="images/logo.png" id="banner-logo" alt="Landing Page"/>
+                            <img src="images/NavLogo.jpg" id="banner-logo" alt="Landing Page"/>
                             <!--End of Banner Logo-->
 
                             <!--The Logo that is shown on the sticky Navigation Bar-->
-                            <img src="images/logo-2.png" id="navigation-logo" alt="Landing Page"/>
+                            <img src="images/NavLogo.jpg" id="navigation-logo" alt="Landing Page"/>
                             <!--End of Navigation Logo-->
 
                         </div>
@@ -329,13 +104,13 @@
                                     <a href="#gallery">Experience</a>
                                 </li>
                                 <li>
-                                    <a href="#services">Skills</a>
+                                    <a href="#Skills">Skills</a>
                                 </li>
                                 <li>
-                                    <a href="#testimonials">Awards</a>
+                                    <a href="#Awards">Awards</a>
                                 </li>
                                 <li>
-                                    <a href="#clients">Contact</a>
+                                    <a href="#Contact">Contact</a>
                                 </li>
                             </ul>
                         </nav>
@@ -365,117 +140,87 @@
 
             </div>
 
-        </div><!--End of Row-->
+        </div>
+        <!--End of Row-->
 
     </header>
 
+
     <main id="content">
 
-    <section id="AboutMe">
-      <div class="container">
-        <div class="section-title1">
-          <h2> About Me </h2>
-          <div class="divider"> </div>
-          <div class="row">
-            <div class="col-md-4" style="text-align: left;">
-              <p style="font-size: 24px;"> <b> Hey! </b> </p>
-              <p style="font-size: 20px;"> I am a 16-year-old high school student born and raised in Toronto, Canada. I have attended Upper Canada College since grade 9. </p>
-            </div>
-            <div class="col-md-4">
-                <img src="images/CanadaWonderland.jpg" style="float: center; width=1">
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+      <section id="AboutMe">
+
+      </section>
 
 
 
-    <section id="Projects">
-      <div class="container">
-        <div class="section-title2">
-          <h2> Projects </h2>
-          <div class="divider"> </div>
-          <p> Tralalala </p>
-        </div>
-      </div>
-    </section>
+      <section id="Experience">
+
+      </section>
 
 
 
-    <section id="Skills">
-      <div class="container">
-        <div class="section-title1">
-          <h2> Skills </h2>
-          <div class="divider"> </div>
-          <p> Tralalala </p>
-        </div>
-      </div>
-    </section>
+      <section id="Skills">
+
+      </section>
 
 
 
-    <section id="Awards">
-      <div class="container">
-        <div class="section-title2">
-          <h2> Awards </h2>
-          <div class="divider"> </div>
-          <p> Tralalala </p>
-        </div>
-      </div>
-    </section>
+      <section id="Awards">
+
+      </section>
 
 
 
-    <section id="Contact">
-      <div class="container">
-        <div class="section-title1">
-          <h2> Contact </h2>
-          <div class="divider"> </div>
-          <div class="row">
-            <div class="col-md-6">
-              <p> You've reached the end of my website. Awesome! If you'd like to contact me, you can reach me at the email seen below. </p>
-              <p> <i class="fa fa-envelope-o"> </i> jackdouglas145@gmail.com </p>
-              <div>
-                <p> You can send me a message on this website! </p>
-              </div>
-              <p> Check out some other platforms I'm on! </p>
-              <div class="row">
-                <div class="col-md-6" style="vertical-align: text-top;">
-                  <a href="https://www.linkedin.com/in/jack-douglas-910896150/" style="text-decoration: none">
-                    <i class="fa fa-linkedin-square fa-4x" style="color: #014B67; float: right;"> </i>
-                  </a>
+      <section id="Contact">
+        <div class="container">
+          <div class="section-title1">
+            <h2> Contact </h2>
+            <div class="divider"> </div>
+            <div class="row">
+              <div class="col-md-6">
+                <p> You've reached the end of my website. Awesome! If you'd like to contact me, you can reach me at the email seen below. </p>
+                <p> <i class="fa fa-envelope-o"> </i> jackdouglas145@gmail.com </p>
+                <div>
+                  <p> You can send me a message on this website! </p>
                 </div>
-                <div class="col-md-6" style="vertical-align: text-top;">
-                  <a href="https://github.com/j-douglas/" style="text-decoration: none">
-                      <i class="fa fa-github fa-4x" style="color: #000000; float: left;"> </i>
-                  </a>
+                <p> Check out some other platforms I'm on! </p>
+                <div class="row">
+                  <div class="col-md-6" style="vertical-align: text-top;">
+                    <a href="https://www.linkedin.com/in/jack-douglas-910896150/" style="text-decoration: none">
+                      <i class="fa fa-linkedin-square fa-4x" style="color: #014B67; float: right;"> </i>
+                    </a>
+                  </div>
+                  <div class="col-md-6" style="vertical-align: text-top;">
+                    <a href="https://github.com/j-douglas/" style="text-decoration: none">
+                        <i class="fa fa-github fa-4x" style="color: #000000; float: left;"> </i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="container" style="background-color: grey;">
+                  <form>
+                    <div class="form-group">
+                      <label style="color: white;">Email</label>
+                      <input type="email" class="form-control" aria-describedby="emailHelp" placeholder="Email" required>
+                    </div>
+                    <div class="form-group">
+                      <label style="color: white;">Subject</label>
+                      <input type="subject" class="form-control" placeholder="Subject" required>
+                    </div>
+                    <div class="form-group">
+                      <label style="color: white;">Message</label>
+                      <textarea class="form-control" rows="3" placeholder="Message" required></textarea>
+                    </div>
+                    <button type="submit" class="btn">Send</button>
+                  </form>
                 </div>
               </div>
             </div>
-            <div class="col-md-6">
-              <div class="container" style="background-color: grey;">
-                <form>
-                  <div class="form-group">
-                    <label style="color: white;">Email</label>
-                    <input type="email" class="form-control" aria-describedby="emailHelp" placeholder="Email" required>
-                  </div>
-                  <div class="form-group">
-                    <label style="color: white;">Subject</label>
-                    <input type="subject" class="form-control" placeholder="Subject" required>
-                  </div>
-                  <div class="form-group">
-                    <label style="color: white;">Message</label>
-                    <textarea class="form-control" rows="3" placeholder="Message" required></textarea>
-                  </div>
-                  <button type="submit" class="btn">Send</button>
-                </form>
-              </div>
-            </div>
           </div>
-      </div>
-    </div>
-    </section>
+        </div>
+      </section>
 
   </main>
 
