--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
     <!--Icon Fonts - Font Awesome Icons-->
     <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/font-awesome.css">
 
     <!-- Animate CSS-->
     <link href="css/animate.css" rel="stylesheet" type="text/css">
@@ -173,83 +174,10 @@
 
 
       <section id="Contact">
-        <div class="container">
-          <div class="section-title1">
-            <h2> Contact </h2>
-            <div class="divider"> </div>
-            <div class="row">
-              <div class="col-md-6">
-                <p> You've reached the end of my website. Awesome! If you'd like to contact me, you can reach me at the email seen below. </p>
-                <p> <i class="fa fa-envelope-o"> </i> jackdouglas145@gmail.com </p>
-                <div>
-                  <p> You can send me a message on this website! </p>
-                </div>
-                <p> Check out some other platforms I'm on! </p>
-                <div class="row">
-                  <div class="col-md-6" style="vertical-align: text-top;">
-                    <a href="https://www.linkedin.com/in/jack-douglas-910896150/" style="text-decoration: none">
-                      <i class="fa fa-linkedin-square fa-4x" style="color: #014B67; float: right;"> </i>
-                    </a>
-                  </div>
-                  <div class="col-md-6" style="vertical-align: text-top;">
-                    <a href="https://github.com/j-douglas/" style="text-decoration: none">
-                        <i class="fa fa-github fa-4x" style="color: #000000; float: left;"> </i>
-                    </a>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="container" style="background-color: grey;">
-                  <form>
-                    <div class="form-group">
-                      <label style="color: white;">Email</label>
-                      <input type="email" class="form-control" aria-describedby="emailHelp" placeholder="Email" required>
-                    </div>
-                    <div class="form-group">
-                      <label style="color: white;">Subject</label>
-                      <input type="subject" class="form-control" placeholder="Subject" required>
-                    </div>
-                    <div class="form-group">
-                      <label style="color: white;">Message</label>
-                      <textarea class="form-control" rows="3" placeholder="Message" required></textarea>
-                    </div>
-                    <button type="submit" class="btn">Send</button>
-                  </form>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+      
       </section>
 
-  </main>
-
-    <div>
-    <footer class="footer" id="footer1">
-      <div class="container">
-        <div class="second-bar">
-            <div class="container">
-                <div class="row"> 
-                  <div class="col-md-4"> 
-                    <h2 id="footer2"> © 2017 Jack Douglas </h2>
-                  </div>
-                  <div class="col-md-4">
-                  </div>
-                  <div class="col-md-4">
-                    <h3 id="footer3"> Made on
-                      <a href="https://github.com/j-douglas/j-douglas.github.io" style="text-decoration: none"> 
-                        <i id="githubImg"class="fa fa-github fa-lg" style="color: #3F3E3E;"></i>
-                      </a>
-                      with
-                      <i class="fa fa-code fa-lg" style="color: #3F3E3E"></i>
-                    </h3>
-                  </div>
-                </div>
-            </div>
-        </div>
-      </div>
-    </footer>
-    </div>
+    </main>
 
   </body>
 
