--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   
   </head>
   
-  <body>
+  <body style="overflow-y: visible;">
 
     <!-- Preloader -->
     <div id="preloader">
@@ -99,10 +99,10 @@
                                     <a href="#banner">Home</a>
                                 </li>
                                 <li>
-                                    <a href="#about">About</a>
+                                    <a href="#AboutMe">About</a>
                                 </li>
                                 <li>
-                                    <a href="#gallery">Experience</a>
+                                    <a href="#Projects">Projects</a>
                                 </li>
                                 <li>
                                     <a href="#Skills">Skills</a>
@@ -132,7 +132,7 @@
 
                 <div class="section-heading">
                     <h1>WELCOME! <br> MY NAME IS JACK DOUGLAS.</h1>
-                    <h2>This website is a portfolio of my experience, skills, awards, and contact information.</h2>
+                    <h2>This website is a portfolio of my projects, skills, awards, and contact information.</h2>
                 </div>
 
                 <!--Call to Action-->
@@ -149,35 +149,123 @@
 
     <main id="content">
 
-      <section id="AboutMe">
+      <section id="AboutMe" class="introduction clearfix scrollto">
+
+        <div class="row clearfix">
+
+            <div class="col-3">
+                  <div class="section-heading">
+                      <h2 class="section-title">About Me</h2>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam!</p>
+                  </div>
+
+            </div>
+
+        </div>
 
       </section>
 
 
 
-      <section id="Experience">
+      <section id="Projects" class="introduction clearfix scrollto">
+
+        <div class="row clearfix">
+
+            <div class="col-3">
+
+            </div>
+
+            <div class="col-3">
+
+            </div>
+
+            <div class="col-3">
+                  <div class="section-heading">
+                      <h2 class="section-title">About Me</h2>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam!</p>
+                  </div>
+
+            </div>
+
+        </div>
 
       </section>
 
 
 
-      <section id="Skills">
+      <section id="Skills" class="introduction clearfix scrollto">
+
+        <div class="row clearfix">
+
+            <div class="col-3">
+                  <div class="section-heading">
+                      <h2 class="section-title">About Me</h2>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam!</p>
+                  </div>
+
+            </div>
+
+        </div>
 
       </section>
 
 
 
-      <section id="Awards">
+      <section id="Awards" class="introduction clearfix scrollto">
 
       </section>
 
 
 
-      <section id="Contact">
+      <section id="Contact" class="introduction clearfix scrollto">
       
+        <div class="row clearfix">
+
+            <div class="col-6">
+                  <div class="section-heading">
+                      <h2 class="section-title">About Me</h2>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam!</p>
+                  </div>
+
+            </div>
+
+            <div class="col-3">
+
+            </div>
+
+        </div>
+
       </section>
 
     </main>
+
+        <!--Footer-->
+    <footer id="landing-footer" class="clearfix">
+        <div class="row clearfix">
+
+            <p id="copyright" class="col-2">Made by Jack Douglas © 2017 </p>
+
+            <!--Social Icons in Footer-->
+            <ul class="col-2 social-icons">
+                <li>
+                      <a target="_blank" title="LinkedIn" href="https://www.linkedin.com/in/jack-douglas-910896150/">
+                        <i class="fa fa-linkedin-square fa-1x"></i><span>LinkedIn</span>
+                      </a>
+                </li>
+                <li>
+                      <a target="_blank" title="Github" href="https://github.com/J-Douglas/">
+                        <i class="fa fa-github fa-1x"></i><span>Github</span>
+                      </a>
+                </li>
+            </ul>
+            <!--End of Social Icons in Footer-->
+        </div>
+    </footer>
+    <!--End of Footer-->
 
   </body>
 
