icon change & stuff

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
 
     <!--Favicon-->
-    <link rel="shortcut icon" href="images/favicon.ico" title="Favicon"/>
+    <link rel="shortcut icon" href="images/WebLogo.jpg" title="Favicon"/>
 
     <!-- Main CSS Files -->
     <link rel="stylesheet" href="css/style.css">
@@ -63,11 +63,11 @@
                         <div id="logo">
 
                             <!--Logo that is shown on the banner-->
-                            <img src="images/NavLogo.jpg" id="banner-logo" alt="Landing Page"/>
+                            <img src="images/JD.jpg" id="banner-logo" alt="Landing Page"/>
                             <!--End of Banner Logo-->
 
                             <!--The Logo that is shown on the sticky Navigation Bar-->
-                            <img src="images/NavLogo.jpg" id="navigation-logo" alt="Landing Page"/>
+                            <img src="images/JD.jpg" id="navigation-logo" alt="Landing Page"/>
                             <!--End of Navigation Logo-->
 
                         </div>
@@ -182,7 +182,7 @@
 
             <div class="col-3">
                   <div class="section-heading">
-                      <h2 class="section-title">About Me</h2>
+                      <h2 class="section-title">Projects</h2>
                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam!</p>
                   </div>
@@ -201,7 +201,7 @@
 
             <div class="col-3">
                   <div class="section-heading">
-                      <h2 class="section-title">About Me</h2>
+                      <h2 class="section-title">Skills</h2>
                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam!</p>
                   </div>
@@ -226,7 +226,7 @@
 
             <div class="col-6">
                   <div class="section-heading">
-                      <h2 class="section-title">About Me</h2>
+                      <h2 class="section-title">Contact</h2>
                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam!</p>
                   </div>
