--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
     <main id="content">
 
-      <section id="AboutMe" class="introduction clearfix scrollto">
+      <section id="AboutMe" class="secondary-color introduction clearfix scrollto">
 
         <div class="row clearfix">
 
@@ -195,32 +195,129 @@
 
 
 
-      <section id="Skills" class="introduction clearfix scrollto">
+      <section id="Skills" class="secondary-color text-center introduction clearfix scrollto">
 
-        <div class="row clearfix">
+                    <div class="row clearfix">
 
-            <div class="col-3">
-                  <div class="section-heading">
-                      <h2 class="section-title">Skills</h2>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam!</p>
-                  </div>
+                <div class="section-heading">
+                    <h2 class="section-title">Skills</h2>
+                </div>
+
+                <!--Pricing Block-->
+                <div class="pricing-block col-3 wow fadeInUp" data-wow-delay="0.4s">
+                    <div class="pricing-block-content">
+                        <h3>Personal</h3>
+                        <p class="pricing-sub">The standard version</p>
+                        <div class="pricing">
+                            <div class="price"><span>$</span>19</div>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                        </div>
+                        <ul>
+                            <li>5 Downloads</li>
+                            <li>2 Extensions</li>
+                            <li>Tutorials</li>
+                            <li>Forum Support</li>
+                            <li>1 year free updates</li>
+                        </ul>
+                        <a href="#" class="button">BUY TODAY</a>
+                    </div>
+                </div>
+                <!--End Pricing Block-->
+
+                <!--Pricing Block-->
+                <div class="pricing-block featured col-3 wow fadeInUp" data-wow-delay="0.6s">
+                    <div class="pricing-block-content">
+                        <h3>Student</h3>
+                        <p class="pricing-sub">Most popular choice</p>
+                        <div class="pricing">
+                            <div class="price"><span>$</span>29</div>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                        </div>
+                        <ul>
+                            <li>15 Downloads</li>
+                            <li>5 Extensions</li>
+                            <li>Tutorials with Files</li>
+                            <li>Forum Support</li>
+                            <li>2 years free updates</li>
+                        </ul>
+                        <a href="#" class="button">BUY TODAY</a>
+                    </div>
+                </div>
+                <!--End Pricing Block-->
+
+                <!--Pricing Block-->
+                <div class="pricing-block col-3 wow fadeInUp" data-wow-delay="0.8s">
+                    <div class="pricing-block-content">
+                        <h3>Business</h3>
+                        <p class="pricing-sub">For the whole team</p>
+                        <div class="pricing">
+                            <div class="price"><span>$</span>49</div>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                        </div>
+                        <ul>
+                            <li>Unlimited Downloads</li>
+                            <li>Unlimited Extensions</li>
+                            <li>HD Video Tutorials</li>
+                            <li>Chat Support</li>
+                            <li>Lifetime free updates</li>
+                        </ul>
+                        <a href="#" class="button">BUY TODAY</a>
+                    </div>
+                </div>
+                <!--End Pricing Block-->
 
             </div>
 
-        </div>
+      </section>
+
+
+
+      <section id="Awards" class="text-center clearfix scrollto" data-enllax-ratio=".2">
+
+        <div class="row clearfix">
+
+                <div class="section-heading">
+                    <h3>FEEDBACK</h3>
+                    <h2 class="section-title">What our customers are saying</h2>
+                </div>
+
+                <!--User Testimonial-->
+                <blockquote class="col-3 testimonial classic">
+                    <img src="images/user-images/user-1.jpg" alt="User"/>
+                    <q>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et dolore magna aliqua</q>
+                    <footer>John Doe - Happy Customer</footer>
+                </blockquote>
+                <!-- End of Testimonial-->
+
+                <!--User Testimonial-->
+                <blockquote class="col-3 testimonial classic">
+                    <img src="images/user-images/user-2.jpg" alt="User"/>
+                    <q>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et dolore magna aliqua</q>
+                    <footer>Roslyn Doe - Happy Customer</footer>
+                </blockquote>
+                <!-- End of Testimonial-->
+
+                <!--User Testimonial-->
+                <blockquote class="col-3 testimonial classic">
+                    <img src="images/user-images/user-3.jpg" alt="User"/>
+                    <q>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et dolore magna aliqua</q>
+                    <footer>Thomas Doe - Happy Customer</footer>
+                </blockquote>
+                <!-- End of Testimonial-->
+
+            </div>
 
       </section>
 
 
 
-      <section id="Awards" class="introduction clearfix scrollto">
-
-      </section>
-
-
-
-      <section id="Contact" class="introduction clearfix scrollto">
+      <section id="Contact" class="secondary-color introduction clearfix scrollto">
       
         <div class="row clearfix">
 
