--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
 
                 <!--Pricing Block-->
                 <div class="pricing-block col-3 wow fadeInUp" data-wow-delay="0.4s">
+                    <!--
                     <div class="pricing-block-content">
                         <h3>Personal</h3>
                         <p class="pricing-sub">The standard version</p>
@@ -221,11 +222,13 @@
                         </ul>
                         <a href="#" class="button">BUY TODAY</a>
                     </div>
+                    -->
                 </div>
                 <!--End Pricing Block-->
 
                 <!--Pricing Block-->
                 <div class="pricing-block featured col-3 wow fadeInUp" data-wow-delay="0.6s">
+                    <!--
                     <div class="pricing-block-content">
                         <h3>Student</h3>
                         <p class="pricing-sub">Most popular choice</p>
@@ -242,11 +245,13 @@
                         </ul>
                         <a href="#" class="button">BUY TODAY</a>
                     </div>
+                  -->
                 </div>
                 <!--End Pricing Block-->
 
                 <!--Pricing Block-->
                 <div class="pricing-block col-3 wow fadeInUp" data-wow-delay="0.8s">
+                    <!--
                     <div class="pricing-block-content">
                         <h3>Business</h3>
                         <p class="pricing-sub">For the whole team</p>
@@ -263,6 +268,7 @@
                         </ul>
                         <a href="#" class="button">BUY TODAY</a>
                     </div>
+                    -->
                 </div>
                 <!--End Pricing Block-->
 
@@ -277,39 +283,41 @@
         <div class="row clearfix">
 
                 <div class="section-heading">
-                    <h3>FEEDBACK</h3>
-                    <h2 class="section-title">What our customers are saying</h2>
+                    <h2 class="section-title">Awards</h2>
                 </div>
 
-                <!--User Testimonial-->
+                <!--Computer Science/Programming-->
                 <blockquote class="col-3 testimonial classic">
-                    <img src="images/user-images/user-1.jpg" alt="User"/>
+                    <h4> <b> Computer Science/Programming </b> </h4>
+                    <img src="images/user-images/user-2.jpg" alt="Computer Science/Programming"/>
                     <q>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore
                         et dolore magna aliqua</q>
-                    <footer>John Doe - Happy Customer</footer>
+                    <footer></footer>
                 </blockquote>
-                <!-- End of Testimonial-->
+                <!--End of Computer Science/Programming Block-->
 
-                <!--User Testimonial-->
+                <!--Mathematics Block-->
                 <blockquote class="col-3 testimonial classic">
-                    <img src="images/user-images/user-2.jpg" alt="User"/>
+                    <h4> <b> Mathematics </b> </h4>
+                    <img src="images/user-images/user-1.jpg" alt="Mathematics"/>
                     <q>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore
                         et dolore magna aliqua</q>
-                    <footer>Roslyn Doe - Happy Customer</footer>
+                    <footer></footer>
                 </blockquote>
-                <!-- End of Testimonial-->
+                <!--End of Mathematics Block-->
 
-                <!--User Testimonial-->
+                <!--Other Block-->
                 <blockquote class="col-3 testimonial classic">
-                    <img src="images/user-images/user-3.jpg" alt="User"/>
+                    <h4> <b> Other </b> </h4>
+                    <img src="images/user-images/user-3.jpg" alt="Other"/>
                     <q>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore
                         et dolore magna aliqua</q>
-                    <footer>Thomas Doe - Happy Customer</footer>
+                    <footer></footer>
                 </blockquote>
-                <!-- End of Testimonial-->
+                <!--End of Other Block-->
 
             </div>
 
