--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
 
-    <!--Favicon-->
-    <link rel="shortcut icon" href="images/WebLogo.jpg" title="Favicon"/>
+    <!--Web Icon-->
+    <link rel="shortcut icon" href="images/AlternateWebLogo.jpg" title="Favicon"/>
 
     <!-- Main CSS Files -->
     <link rel="stylesheet" href="css/style.css">
@@ -23,7 +23,6 @@
 
     <!--Icon Fonts - Font Awesome Icons-->
     <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/font-awesome.css">
 
     <!-- Animate CSS-->
     <link href="css/animate.css" rel="stylesheet" type="text/css">
@@ -87,6 +86,11 @@
                                         <i class="fa fa-github fa-1x"></i><span>Github</span>
                                     </a>
                                 </li>
+                               <li>
+                                    <a target="_blank" title="Devpost" href="https://devpost.com/J-Douglas?ref_content=user-portfolio&ref_feature=portfolio&ref_medium=global-nav">
+                                        <i class="fa fa-code fa-1x"></i><span>Devpost</span>
+                                    </a>
+                                </li>
                             </ul>
                             <!--End of Social Icons in Header-->
 
@@ -131,13 +135,13 @@
             <div class="col-38">
 
                 <div class="section-heading">
-                    <h1>WELCOME! <br> MY NAME IS JACK DOUGLAS.</h1>
+                    <h1>WELCOME! <br> MY NAME IS <br> JACK DOUGLAS.</h1>
                     <h2>This website is a portfolio of my projects, skills, awards, and contact information.</h2>
                 </div>
 
-                <!--Call to Action-->
-                <a href="#" class="button">START CREATING TODAY</a>
-                <!--End Call to Action-->
+                <!--Resume Button-->
+                  <a href="documents/JackDouglasResume.pdf" class="button" target="_blank">My Resume</a>
+                <!--End of Resume Button-->
 
             </div>
 
@@ -153,13 +157,17 @@
 
         <div class="row clearfix">
 
-            <div class="col-3">
+            <div class="col-2">
                   <div class="section-heading">
                       <h2 class="section-title">About Me</h2>
                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam!</p>
                   </div>
 
+            </div>
+
+            <div class="col-3">
+              <img style="text-align:center;" src="images/Me.jpg"></img>
             </div>
 
         </div>
@@ -197,7 +205,7 @@
 
       <section id="Skills" class="secondary-color text-center introduction clearfix scrollto">
 
-                    <div class="row clearfix">
+            <div class="row clearfix">
 
                 <div class="section-heading">
                     <h2 class="section-title">Skills</h2>
@@ -288,33 +296,24 @@
 
                 <!--Computer Science/Programming-->
                 <blockquote class="col-3 testimonial classic">
+                    <img src="images/ComputerScience.jpg" alt="Computer Science/Programming"/>
                     <h4> <b> Computer Science/Programming </b> </h4>
-                    <img src="images/user-images/user-2.jpg" alt="Computer Science/Programming"/>
-                    <q>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore
-                        et dolore magna aliqua</q>
-                    <footer></footer>
+                    <footer> heya </footer>
                 </blockquote>
                 <!--End of Computer Science/Programming Block-->
 
                 <!--Mathematics Block-->
                 <blockquote class="col-3 testimonial classic">
+                    <img src="images/Mathematics.jpg" alt="Mathematics"/>
                     <h4> <b> Mathematics </b> </h4>
-                    <img src="images/user-images/user-1.jpg" alt="Mathematics"/>
-                    <q>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore
-                        et dolore magna aliqua</q>
                     <footer></footer>
                 </blockquote>
                 <!--End of Mathematics Block-->
 
                 <!--Other Block-->
                 <blockquote class="col-3 testimonial classic">
+                    <img src="images/Award.jpg" alt="Other"/>
                     <h4> <b> Other </b> </h4>
-                    <img src="images/user-images/user-3.jpg" alt="Other"/>
-                    <q>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore
-                        et dolore magna aliqua</q>
                     <footer></footer>
                 </blockquote>
                 <!--End of Other Block-->
@@ -323,22 +322,29 @@
 
       </section>
 
+      <section id="Contact" class="secondary-color introduction scrollto clearfix">
 
-
-      <section id="Contact" class="secondary-color introduction clearfix scrollto">
-      
         <div class="row clearfix">
 
-            <div class="col-6">
+            <div class="col-2">
                   <div class="section-heading">
                       <h2 class="section-title">Contact</h2>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam!</p>
+                      <p> You've reached the end of my website. Awesome! Feel free to contact me via email. You can also use the integrated message form below. </p>
                   </div>
 
             </div>
 
-            <div class="col-3">
+            <div class="col-3" style="text-align: center; padding-top: 130px;">
+
+              <!--Email-->
+              <h4> <b> <u> Email  </u> </b> </h4>
+              <h5> <i class="fa fa-envelope"> </i> jackdouglas145@gmail.com </h5>
+              
+              <br>
+
+              <!--Location-->
+              <h4> <b> <u> Location </u> </b> </h4>
+              <h5> <i class="fa fa-map-pin"> </i> Toronto, Canada </h5>
 
             </div>
 
@@ -352,7 +358,7 @@
     <footer id="landing-footer" class="clearfix">
         <div class="row clearfix">
 
-            <p id="copyright" class="col-2">Made by Jack Douglas © 2017 </p>
+            <p id="copyright" class="col-2">Made by Jack Douglas © 2017</p>
 
             <!--Social Icons in Footer-->
             <ul class="col-2 social-icons">
@@ -364,6 +370,11 @@
                 <li>
                       <a target="_blank" title="Github" href="https://github.com/J-Douglas/">
                         <i class="fa fa-github fa-1x"></i><span>Github</span>
+                      </a>
+                </li>
+                <li>
+                      <a target="_blank" title="Devpost" href="https://devpost.com/J-Douglas?ref_content=user-portfolio&ref_feature=portfolio&ref_medium=global-nav">
+                        <i class="fa fa-code fa-1x"></i><span>Devpost</span>
                       </a>
                 </li>
             </ul>
