--- a/index.html
+++ b/index.html
@@ -180,7 +180,11 @@
 
         <div class="row clearfix">
 
-            <div class="col-3">
+            <div class="col-3" data-featherlight-gallerydata-featherlight-filter="a" tabindex="-1">
+
+              <a href="https://zhast.github.io/MoneySmart/index.html">
+                   <img src="images/MoneySmart.jpg" alt="Landing Page"/>
+              </a>
 
             </div>
 
@@ -211,12 +215,11 @@
                     <h2 class="section-title">Skills</h2>
                 </div>
 
-                <!--Pricing Block-->
+                <!--Skill 1-->
                 <div class="pricing-block col-3 wow fadeInUp" data-wow-delay="0.4s">
-                    <!--
                     <div class="pricing-block-content">
-                        <h3>Personal</h3>
-                        <p class="pricing-sub">The standard version</p>
+                        <h3>Skill 1</h3>
+                        <!--<p class="pricing-sub">The standard version</p>
                         <div class="pricing">
                             <div class="price"><span>$</span>19</div>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
@@ -228,18 +231,16 @@
                             <li>Forum Support</li>
                             <li>1 year free updates</li>
                         </ul>
-                        <a href="#" class="button">BUY TODAY</a>
+                        <a href="#" class="button">BUY TODAY</a>-->
                     </div>
-                    -->
                 </div>
-                <!--End Pricing Block-->
+                <!--End of Skill 1-->
 
-                <!--Pricing Block-->
+                <!--Skill 2-->
                 <div class="pricing-block featured col-3 wow fadeInUp" data-wow-delay="0.6s">
-                    <!--
                     <div class="pricing-block-content">
-                        <h3>Student</h3>
-                        <p class="pricing-sub">Most popular choice</p>
+                        <h3>Skill 2</h3>
+                        <!--<p class="pricing-sub">Most popular choice</p>
                         <div class="pricing">
                             <div class="price"><span>$</span>29</div>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
@@ -251,18 +252,16 @@
                             <li>Forum Support</li>
                             <li>2 years free updates</li>
                         </ul>
-                        <a href="#" class="button">BUY TODAY</a>
+                        <a href="#" class="button">BUY TODAY</a>-->
                     </div>
-                  -->
                 </div>
-                <!--End Pricing Block-->
+                <!--End of Skill 2-->
 
-                <!--Pricing Block-->
+                <!--Skill 3-->
                 <div class="pricing-block col-3 wow fadeInUp" data-wow-delay="0.8s">
-                    <!--
                     <div class="pricing-block-content">
-                        <h3>Business</h3>
-                        <p class="pricing-sub">For the whole team</p>
+                        <h3>Skill 3</h3>
+                        <!--<p class="pricing-sub">For the whole team</p>
                         <div class="pricing">
                             <div class="price"><span>$</span>49</div>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
@@ -274,11 +273,10 @@
                             <li>Chat Support</li>
                             <li>Lifetime free updates</li>
                         </ul>
-                        <a href="#" class="button">BUY TODAY</a>
+                        <a href="#" class="button">BUY TODAY</a>-->
                     </div>
-                    -->
                 </div>
-                <!--End Pricing Block-->
+                <!--End Skill 3-->
 
             </div>
 
@@ -298,7 +296,11 @@
                 <blockquote class="col-3 testimonial classic">
                     <img src="images/ComputerScience.jpg" alt="Computer Science/Programming"/>
                     <h4> <b> Computer Science/Programming </b> </h4>
-                    <footer> heya </footer>
+                    <footer>
+
+                      <p> • Thompson Prize for Grade 11 Computer Science (2016) <br> • Certificate of Distinction on Canadian Computing Contest (2017) <br>  </p>
+
+                    </footer>
                 </blockquote>
                 <!--End of Computer Science/Programming Block-->
 
@@ -306,7 +308,12 @@
                 <blockquote class="col-3 testimonial classic">
                     <img src="images/Mathematics.jpg" alt="Mathematics"/>
                     <h4> <b> Mathematics </b> </h4>
-                    <footer></footer>
+                    <footer>
+
+                      <p> • 1st Place on Pascal Math Contest (2016) <br> • 37th Place on Galois Math Contest (2017) <br> • 149th Place on Hypatia Math Contest (2015)</p>
+
+
+                    </footer>
                 </blockquote>
                 <!--End of Mathematics Block-->
 
@@ -314,7 +321,11 @@
                 <blockquote class="col-3 testimonial classic">
                     <img src="images/Award.jpg" alt="Other"/>
                     <h4> <b> Other </b> </h4>
-                    <footer></footer>
+                    <footer>
+
+                      <p> • Silver Service Award (2017) <br> • UCC General Proficiency Award (2017) <br> • Top Defenceman Award for JV Soccer (2017) </p>
+
+                    </footer>
                 </blockquote>
                 <!--End of Other Block-->
 
