--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
                         <div id="logo">
 
                             <!--Logo that is shown on the banner-->
-                            <img src="images/JD.jpg" id="banner-logo" alt="Landing Page"/>
+                            <img src="images/JD.jpg" id="banner-logo" alt="Banner Logo"/>
                             <!--End of Banner Logo-->
 
                             <!--The Logo that is shown on the sticky Navigation Bar-->
-                            <img src="images/JD.jpg" id="navigation-logo" alt="Landing Page"/>
+                            <img src="images/JD.jpg" id="navigation-logo" alt="NavBar Logo"/>
                             <!--End of Navigation Logo-->
 
                         </div>
@@ -160,8 +160,7 @@
             <div class="col-2">
                   <div class="section-heading">
                       <h2 class="section-title">About Me</h2>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam!</p>
+                      <p>  </p>
                   </div>
 
             </div>
@@ -176,34 +175,41 @@
 
 
 
-      <section id="Projects" class="introduction clearfix scrollto">
+      <!--Clients-->
+        <section id="Projects" class="scrollto clearfix">
+            <div class="row clearfix">
 
-        <div class="row clearfix">
+                <div class="col-2-3">
 
-            <div class="col-3" data-featherlight-gallerydata-featherlight-filter="a" tabindex="-1">
+                    <a href="#" class="col-3">
+                        <img src="images/StockSee.jpg" alt="StockSee"/>
+                        <div class="Projects-overlay"><span> StockSee <br><br> A website created at THacks2 that predicts the trends of popular stock sectors.</span></div>
+                    </a>
 
-              <a href="https://zhast.github.io/MoneySmart/index.html">
-                   <img src="images/MoneySmart.jpg" alt="Landing Page"/>
-              </a>
+                    <a href="https://zhast.github.io/MoneySmart/index.html" class="col-3">
+                        <img src="images/MoneySmart.png" alt="MoneySmart"/>
+                        <div class="Projects-overlay"><span> MoneySmart <br><br> A new financial literacy platform for high school students and young adults.</span></div>
+                    </a>
+                  
+                    <a href="#" class="col-3">
+                        <img src="images/company-images/company-logo3.png" alt="Company"/>
+                        <div class="Projects-overlay"><span>The Man</span></div>
+                    </a>
+
+                </div>
+
+                <div class="col-3">
+
+                    <div class="section-heading">
+                        <h2 class="section-title">Projects</h2>
+                        <p class="section-subtitle">I've worked on several projects and I hope to work on more! Here is a list of all the projects I have worked on.</p>
+                    </div>
+
+                </div>
 
             </div>
-
-            <div class="col-3">
-
-            </div>
-
-            <div class="col-3">
-                  <div class="section-heading">
-                      <h2 class="section-title">Projects</h2>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam!</p>
-                  </div>
-
-            </div>
-
-        </div>
-
-      </section>
+        </section>
+        <!--End of Clients-->
 
 
 
@@ -310,7 +316,7 @@
                     <h4> <b> Mathematics </b> </h4>
                     <footer>
 
-                      <p> • 1st Place on Pascal Math Contest (2016) <br> • 37th Place on Galois Math Contest (2017) <br> • 149th Place on Hypatia Math Contest (2015)</p>
+                      <p> • Perfect Score on Pascal Math Contest (2016) <br> • 7th on Newton Math Contest (2015) <br> • 37th Place on Galois Math Contest (2017) <br> • Represented Upper Canada College at the Harvard MIT Mathematics Tournament (2016) <br> • 149th Place on Hypatia Math Contest (2015)</p>
 
 
                     </footer>
@@ -345,7 +351,7 @@
 
             </div>
 
-            <div class="col-3" style="text-align: center; padding-top: 130px;">
+            <div class="col-2" style="text-align: center; padding-top: 130px;">
 
               <!--Email-->
               <h4> <b> <u> Email  </u> </b> </h4>
