--- a/index.html
+++ b/index.html
@@ -196,6 +196,11 @@
                         <div class="Projects-overlay"><span> The Synapse Conference <br><br> A neuroscience and mental health conference for high school students. It will take place in April 2018.</span></div>
                     </a>
 
+                    <a href="#" class="col-3">
+                        <img src="images/ThermoBeat.png" alt="ThermoBeat"/>
+                        <div class="Projects-overlay"><span> ThermoBeat <br><br>  </span></div>
+                    </a>
+
                 </div>
 
                 <div class="col-3">
