--- a/navigation.html
+++ b/navigation.html
@@ -1,3 +1,4 @@
+<html>
 			<p> hi </p>
 
 			<!-- Navigation Bar -->
@@ -36,3 +37,4 @@
                 </div>
             </nav>
             <!--// Navigation Bar -->
+</html>
