--- a/footer.html
+++ b/footer.html
@@ -1,3 +1,4 @@
+<html>
             <!-- footer -->
             <footer class="footer">
 
@@ -72,3 +73,5 @@
 
             </footer>
             <!-- //footer -->
+
+</html>
