--- a/test.html
+++ b/test.html
@@ -13,11 +13,11 @@
 </head>
 <body>
 
-	<div class="nav-placeholder">
+	<div id="nav-placeholder">
 	</div>
 
 
-	<div class="footer-placeholder">
+	<div id="footer-placeholder">
 	</div>
 
 </body>
